// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/DataWell Fixed Width Row 1`] = `
<div
  data-css-1s5t7h8=""
>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Dog count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      234,345
    </div>
    <div
      data-css-r0jy42=""
    >
      All the doggies
    </div>
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Cat count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      123
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Rafters on the River
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      1,345/23,235
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Flotsam
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      About 3
    </div>
    <div
      data-css-r0jy42=""
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/DataWell Row 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Dog count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      234,345
    </div>
    <div
      data-css-r0jy42=""
    >
      All the doggies
    </div>
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Cat count
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      123
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Rafters on the River
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      1,345/23,235
    </div>
    <div
      data-css-r0jy42=""
    />
  </div>
  <div
    data-css-76j83k=""
  >
    <div>
      <span
        className="psds-text__label psds-text__label--size-xSmall psds-text__label--color-secondary psds-theme--dark psds-text__label--strong psds-text__label--caps"
        data-css-1xy8nxm=""
      >
        Flotsam
      </span>
    </div>
    <div
      data-css-1cytfqa=""
    >
      About 3
    </div>
    <div
      data-css-r0jy42=""
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;
